# file-server

./: LICENSE  README.md
fs-bazel/: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
fs-bazel/apps/android/: AndroidManifest.xml  BUILD.bazel
fs-bazel/apps/android/src/main/kotlin/com/example/android/: MainActivity.kt
fs-bazel/apps/android/src/main/res/layout/: activity_main.xml
fs-bazel/apps/android/src/main/res/values/: strings.xml
fs-bazel/apps/cli/: BUILD.bazel
fs-bazel/apps/cli/src/main/kotlin/com/example/cli/: BUILD.bazel  Main.kt
fs-bazel/patches/: BUILD.bazel  rules_kotlin_android_jar.patch
fs-cargo/: Cargo.toml  README.md  index.html  main.rs
