module(
    name = "fs_bazel",
    version = "0.1.0",
)

bazel_dep(name = "rules_kotlin", version = "2.1.0")
bazel_dep(name = "rules_android", version = "0.6.0")
bazel_dep(name = "rules_java", version = "8.9.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "rules_shell", version = "0.3.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.6")

single_version_override(
    module_name = "rules_kotlin",
    version = "2.1.0",
    patches = ["//patches:rules_kotlin_android_jar.patch"],
    patch_strip = 1,
)

android_sdk_repository = use_repo_rule("@rules_android//rules/android_sdk_repository:rule.bzl", "_android_sdk_repository")
android_sdk_repository(
    name = "androidsdk",
    api_level = 34,
    build_tools_version = "34.0.0",
)
