load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")

kt_jvm_library(
    name = "cli_lib",
    srcs = ["src/main/kotlin/com/example/cli/Main.kt"],
    visibility = ["//visibility:public"],
)

kt_jvm_binary(
    name = "cli",
    main_class = "com.example.cli.MainKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":cli_lib"],
)
